Artículo de permisos GNU Linux hecho.

--- a/_data/locales/es.yml
+++ b/_data/locales/es.yml
@@ -48,7 +48,7 @@ copyright:
     Excepto donde si indique lo contrario, los articulos de este blog están licenciados
     bajo Creative Commons Attribution 4.0 International (CC BY 4.0) License por el autor.
 
-meta: Powered by :PLATFORM with :THEME theme.
+meta: Desarrollado por :PLATFORM con el tema :THEME.
 
 not_found:
   statment: Lo sentimos pero esta URL apunta a algo que no existe.
