Todo limpio para los alumnos

--- a/_data/locales/es.yml
+++ b/_data/locales/es.yml
@@ -45,8 +45,8 @@ copyright:
   # Displayed in the footer
   brief: Algunos derechos reservados.
   verbose: >-
-    Excepto donde si indique lo contrario, los articulos de este blog están licenciados
-    bajo Creative Commons Attribution 4.0 International (CC BY 4.0) License por el autor.
+    Excepto donde si indique lo contrario, los artículos de este blog están licenciados
+    bajo Creative Commons Attribution 4.0 International (CC BY 4.0) Licenciado por el autor.
 
 meta: Desarrollado por :PLATFORM con el tema :THEME.
 
