Arreglo artículo para guardias o tutorías

--- a/_posts/2022-01-19-guardias.md
+++ b/_posts/2022-01-19-guardias.md
@@ -9,11 +9,11 @@ tags: [tutoría, vídeos, debate, entretenimiento, guardia]
 
 ### Mi Horrible Experiencia en el Sistema Educativo
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ny61lc2xiZk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/ny61lc2xiZk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ### ¿Por qué el Sistema Educativo No Funciona?
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/iEb9L2CMjr0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/iEb9L2CMjr0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ### Otros
 
@@ -48,10 +48,6 @@ tags: [tutoría, vídeos, debate, entretenimiento, guardia]
 
 <iframe width="100%" height="315" src="https://www.youtube.com/embed/I2n3sBUIRmo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-### Victor Kuppers 10 min geniales
-
-<iframe width="100%" height="315" src="https://www.youtube.com/embed/wAmVohZsTDA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
 #### Preguntas
 
 - ¿Es difícil hacer fuego?
@@ -59,9 +55,13 @@ tags: [tutoría, vídeos, debate, entretenimiento, guardia]
 - ¿Qué opináis de los neandertales que hace 50.000 años descubrieron esta forma hacer fuego sin que nadie les explicara cómo?
 - ¿Sabíais que los neandertales son indistinguibles genéticamente de nosotros?
 
+### Victor Kuppers 10 min geniales
+
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/wAmVohZsTDA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 ### Otros
 
-- [https://www.youtube.com/watch?v=nseLteyJbMk](Emilio Duró)
+- [Emilio Duró](https://www.youtube.com/watch?v=nseLteyJbMk)
 
 ## Vídeos ética
 
@@ -103,17 +103,52 @@ tags: [tutoría, vídeos, debate, entretenimiento, guardia]
 - ¿Por qué los niños no tienen complejos?
 - ¿En qué momento empieza a importarnos lo que opinan los demás sobre nosotros?
 
-## El vertedero electrónico
+### In Real Life - Bullying
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/URvC6T_xhE0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+- ¿Creeis que la libertad de expresión tiene límites?
+- ¿Dónde estaría ese límite?
+
+### Sin Palabras, Este Video Toco Mi Corazón
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/GEV-8wnvwes" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+#### Preguntas
+
+- ¿Qué es la empatía?
+- ¿Qué es la solidaridad?
+- ¿Por qué creeis que hay gente que participa en voluntariados?
+- ¿Cuál es el proposito de la vida?
+
+### Gift - Respeto a los animales
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/JMs7dkdO4YY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+#### Preguntas
+
+- ¿Cuál es vuestra impresión sobre el vídeo?
+- ¿Tenéis mascotas? ¿Las cuidais vosotros? ¿Qué cuidados necesitan?
+- ¿Sabeis que es una protectora?
+- ¿Qué tipos de animales pueden ser mascotas?
+
+### El vertedero electrónico
 
 <iframe width="100%" height="315" src="https://www.youtube.com/embed/lGdgtUDE9TY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-## ¿Cómo reacciona la gente frente al acoso escolar? - Bullying
+### ¿Cómo reacciona la gente frente al acoso escolar? - Bullying
 
 <iframe width="100%" height="315" src="https://www.youtube.com/embed/bhTSKPsjIiE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-##  Telefonillo - Violencia de género
+###  Telefonillo - Violencia de género
 
 <iframe width="100%" height="315" src="https://www.youtube.com/embed/mjGAeOPVrPc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+#### Preguntas
+
+- ¿Creeís que ha actuado bien al chica?
+- ¿Cómo deberia haber actuado?
+
 
 ## Bibliografía
 
