--- a/_posts/2022-01-30-binario.md
+++ b/_posts/2022-01-30-binario.md
@@ -7,7 +7,7 @@ tags: [redes locales, binario, decimal]
 
 ## Binario a decimal
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/3HRu7BvuSIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/3HRu7BvuSIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Pasar de binario a decimal
 
@@ -19,6 +19,8 @@ tags: [redes locales, binario, decimal]
 | 0 | 0 |
 | 1 | 1 |
 
+Como podemos observar, con palabras de 1 bit podemos representar un total de 2<sup>1</sup> (2) números, cuyo rango va de 0 a 1.
+
 ### Núemeros de 2 bits
 
 | 2<sup>1</sup> | 2<sup>0</sup> |  |
@@ -28,6 +30,8 @@ tags: [redes locales, binario, decimal]
 | 0 | 1 | 1 |
 | 1 | 0 | 2 |
 | 1 | 1 | 3 |
+
+Como podemos observar, con palabras de 2 bits podemos representar un total de 2<sup>2</sup> (4) número, cuyo rango va de 0 a 3.
 
 ### Números de 3 bits
 
@@ -43,6 +47,8 @@ tags: [redes locales, binario, decimal]
 | 1 | 1 | 0 | 6 |
 | 1 | 1 | 1 | 7 |
 
+Como podemos observar, con palabras de 3 bits podemos representar un total de 2<sup>3</sup> (8) números, cuyo rango va de 0 a 7.
+
 ### Números de 8 bits (octetos)
 
 |   | 2<sup>7</sup> | 2<sup>6</sup> | 2<sup>5</sup> | 2<sup>4</sup> | 2<sup>3</sup> | 2<sup>2</sup> | 2<sup>1</sup> | 2<sup>0</sup> |   |
@@ -51,10 +57,22 @@ tags: [redes locales, binario, decimal]
 | Ej. 1 | 0 | 0 | 0 | 0 | 1 | 0 | 0 | 1 | 9 |
 | Ej. 2 | 1 | 1 | 0 | 0 | 1 | 1 | 0 | 0 | 204 |
 
+Como podemos observar, con palabras de 8 bit podemos representar un total de 2<sup>8</sup> (256) números, cuyo rango va de 0 a 255.
+
+### Números de X bits
+
+Con palabras de X bits podemos representar un total de 2<sup>X</sup> números, cuyo rango va de 0 a 2<sup>X</sup>-1.
 
 ## Decimal a binario
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/IpxNHH88HRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/IpxNHH88HRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+### Consejos para el paso de binario a decimal
+
+- Si el bit de menor peso vale 1 nos encontraremos ante un número impar.
+- Si añadimos ceros por la izquierda a un número binario, el número no cambia.
+- Si añadimos ceros por la derecha a un número binario lo estamos multiplicando por dos.
+- Si el número que es todo unos, una forma rápida de calcular su valor es calcular el siguiente número y restarle uno a posteriori. Es decir, si tengo que obtener el valor de 111111, puedo calcular el valor de 1000000 que es 64 y restarle uno obteniendo que (111111)<sub>2</sub> = (63)<sub>10</sub>.
 
 ### Números de 8 bits (octetos)
 
@@ -69,8 +87,9 @@ tags: [redes locales, binario, decimal]
 
 ## Binario a hexadecimal
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/uQaLpYDCkAA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/uQaLpYDCkAA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Hexadecimal a binario
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Wx9X14aVfMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/Wx9X14aVfMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
