Evaluación 2 de RL totalmente preparada

--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -1,9 +1,13 @@
 ---
-title: ¿Qué es un NAT?
+title: NAT o enmascaramiento IP
 date: 2022-02-08 13:30:00 +0100
 categories: [Sistemas Microinformáticos y Redes, Redes Locales]
 tags: [redes locales, smr, teoría]
 ---
+
+## Aviso
+
+En la Sección 6.9 del libro está muy bien explicado.
 
 ## Introducción
 
@@ -11,11 +15,11 @@ tags: [redes locales, smr, teoría]
 
 Lo habitual es que las LAN que tienen acceso a Internet utilicen un esquema de direcciones IP privadas para tráfico local de la red y que en Internet usen unas direcciones IP públicas.
 
-La traducción de estas direcciones de red (NAT) es un mecanismo que permite a varias máquinas de una LAN con direcciones privadas para que puedan acceder a una red externa, por ejemplo Internet, con una IP pública. 
+La traducción de estas direcciones de red (NAT) es un mecanismo que permite a varias máquinas de una LAN con direcciones privadas para que puedan acceder a una red externa, por ejemplo Internet, con una IP pública. Esta traducción de direcciones también es llamada **enmascaramiento IP**.
 
 Para que sea posible hacer esa traducción de direcciones ha de haber un dispositivo que se encargue de hacer esa traducción en ambos sentidos que generalmente es un router, un cortafuegos o un equipo dedicado (proxy NAT). 
 
-Ejemplo: una cosa son las direcciones que tenemos en la red en nuestra casa y otra es cómo nos ven desde fuera de nuestra red.
+Ejemplo: Una cosa son las direcciones que tenemos en la red en nuestra casa y otra es cómo nos ven desde fuera de nuestra red.
 
 ## Tipos de NAT
 
@@ -30,3 +34,18 @@ Se trata del típico caso en el que necesitamos publicar un servicio de la red i
 La NAT se establece dinámicamente cuando se inicia una conexión desde el equipo de la red interna. Cada nueva conexión implica la reserva temporal de un puerto, asociado la IP pública del equipo que hace NAT.
 
 Cuando la conexión termina el correspondiente NAT se elimina liberando del puerto que tenía asociado. Es un NAT que se establece dinámicamente ya que lo gestiona el propio dispositivo y está pensado para tráfico saliente.
+
+## Ejemplo de funcionamiento NAT
+
+Supongamos que tenemos un host, que llamaremos CLIENTE y que tiene por dirección IP 10.1.1.5 y máscara de toda la red 255.0.0.0, que quiere acceder a Internet solicitando páginas a través de su navegador. La conexión a Internet se ha realizado en otro host de la red al que llamaremos SERVIDOR con dirección IP 10.1.1.1 y que está en la misma subred que CLIENTE. 
+
+Cuando SERVIDOR realiza una conexión a Internet, su proveedor le proporciona una dirección IP a la interfaz de red WAN por la que se conecta remotamente que es 213.97.2.12. 
+
+Debemos tener en cuenta que los pasos 1 y 4 se producen dentro de una LAN, mientras que los números 2 y 3 proceden de una WAN.
+
+![img-description](/assets/img/nat/ejemploNat.png)
+_Esquema de un ejemplo de utilización de enmascaramiento IP_
+
+En CLIENTE, configuramos TCP/P para que la ruta por defecto apunte a SERVIDOR. Por otra parte, por ejemplo, el navegador pediría datos utilizando un puerto que el servidor que le brinde las páginas aprovechará para enviárselas con la seguridad de que el navegador se quedó escuchando por ese puerto. 
+
+Si el navegador en CLIENTE solicita una página al servidor 225.10.2.150 por el puerto 1345, como CLIENTE no tiene acceso por red al host 225.10.2.150, mandará el men saje por la ruta de defecto a SERVIDOR. Si SERVIDOR tiene habilitado el servicio de enmascaramiento, sustituirá la dirección IP de CLIENTE por la suya propia en la interfaz WAN (213.97.2.12) y el número de puerto por otro que tenga libre, haciéndole la petición al servidor web de dirección 225.10.2.150. Cuando el servidor web le conteste, SERVIDOR sustituirá la dirección IP WAN suya (213.97.2.12) por la dirección IP propia en su red de área local (10.1.1.1) y se lo mandará a CLIENTE por el puerto por el que este se quedó esperando, en nuestro ejemplo, el 1345. De este modo, CLIENTE ha recibido sus datos transparentemente.
