--- a/_posts/2022-02-08-vlan.md
+++ b/_posts/2022-02-08-vlan.md
@@ -5,12 +5,18 @@ categories: [Sistemas Microinformáticos y Redes, Redes Locales]
 tags: [redes locales, smr, teoría]
 ---
 
+## Aviso
+
+En la Sección 6.8 del libro está **mejor** explicado.
+
+{:.section}
 ## Introducción
 
 En ocasiones es necesario que una red pueda filtrar los paquetes para que la información generada por una serie de hosts no sea visible por otra parte de los hosts dentro de la misma LAN. Esto lo conseguimos definiendo unas LAN virtuales o VLAN.
 
 Una VLAN es un método que crea una red lógica dentro de una red física. De este modo se consigue que la información que se genera dentro de cada una de las redes virtuales solo sea recibida por hosts de la propia red lógica y no por toda la red física.
 
+{:.section}
 ## Características de las VLAN
 
 Las principales características de la VLAN son:
@@ -29,8 +35,10 @@ Otras características son:
 - Aumento de la flexibilidad de la red: Varios hosts conectados al mismo conmutador puedan pertenecer a distintas VLAN, y también hosts de distintos conmutadores pueden pertenecer a la misma VLAN. 
 - Aumento de la escalabilidad de la red: Es más fácil aumentar una red previamente segmentada da sus ventajas en ancho de banda seguridad y flexibilidad. 
 
+{:.section}
 ## Formas de VLAN
 
+{:.subsection}
 ### Switches y VLAN.
 
 La infraestructura de VLAN está distribuida entre varios conmutadores (switches), que se dictan conectan entre sí mediante puertos de mayor capacidad. Este interconexión es considerada parte del cableado backbone o troncal de la red.
@@ -43,18 +51,21 @@ La información sobre las VLAN definidas y sobre la pertenencia de cada uno de l
 - Las tramas etiquetadas atraviesan el backbone. 
 - Cuando una trama etiquetado abandona el backbone, el conmutador elimina el identificador. 
 
+{:.subsection}
 ### Routers y VLAN
 
 Las VLAN son dominios de difusión separados, por tanto, los equipos de las distintas VLAN no se pueden comunicar directamente entre sí a nivel lógico, sino que necesitan un router. 
 
 Lo habitual es que cada VLAN se corresponda con una subred lógica y la comunicación entre VLAN se hará a través de un router.
 
+{:.subsection}
 ### Hubs y VLAN
 
 Para reducir costes, es posible utilizar Hubs pero teniendo en cuenta algunas cuestiones: 
 - El Hub se conecta por un lado a un puerto de un switch VLAN, y por otro lado a cierto número de equipos de usuarios.
-- Todos los usuarios conectados al mismo Hub pertenecen A la misma VLAN, y  al mismo dominio de colisión, es decir comparten el ancho de banda correspondiente al puerto de switch. 
+- Todos los usuarios conectados al mismo Hub pertenecen A la misma VLAN, y al mismo dominio de colisión, es decir comparten el ancho de banda correspondiente al puerto de switch. 
 
+{:.section}
 ## Asignación de usuarios en VLAN
 
 La asignación de los usuarios puede ser de dos maneras: 
@@ -62,12 +73,14 @@ La asignación de los usuarios puede ser de dos maneras:
 - Estática 
 - Dinámica
 
+{:.subsection}
 ### Estática
 
 Cada puerto del switch se asigna a una VLAN. Por tanto el equipo del usuario conectado a ese puerto pertenecerá a esa VLAN. La persona que administre la red debe realizar la configuración VLAN manualmente, es fácil de administrar y su implementación es más eficiente. 
 
 Por defecto la VLAN 1 es con la que se suele trabajar. 
 
+{:.subsection}
 ### Dinámica
 
 La pertenencia a una VLAN puede depender de tres factores:
