--- a/_posts/2022-01-30-binario.md
+++ b/_posts/2022-01-30-binario.md
@@ -82,7 +82,7 @@ Con palabras de X bits podemos representar un total de 2<sup>X</sup> números, c
 | Ej. 1 |   |   |   |   |   |   |   |   | 60 |
 | Ej. 2 |   |   |   |   |   |   |   |   | 210 |
 
-{.pregunta}
+{:.question}
 ¿Se puede representar el número 315 con palabras de 8 bits? ¿Qué ocurre?
 
 ## Binario a hexadecimal
