--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -49,3 +49,9 @@ _Esquema de un ejemplo de utilización de enmascaramiento IP_
 En CLIENTE, configuramos TCP/P para que la ruta por defecto apunte a SERVIDOR. Por otra parte, por ejemplo, el navegador pediría datos utilizando un puerto que el servidor que le brinde las páginas aprovechará para enviárselas con la seguridad de que el navegador se quedó escuchando por ese puerto. 
 
 Si el navegador en CLIENTE solicita una página al servidor 225.10.2.150 por el puerto 1345, como CLIENTE no tiene acceso por red al host 225.10.2.150, mandará el men saje por la ruta de defecto a SERVIDOR. Si SERVIDOR tiene habilitado el servicio de enmascaramiento, sustituirá la dirección IP de CLIENTE por la suya propia en la interfaz WAN (213.97.2.12) y el número de puerto por otro que tenga libre, haciéndole la petición al servidor web de dirección 225.10.2.150. Cuando el servidor web le conteste, SERVIDOR sustituirá la dirección IP WAN suya (213.97.2.12) por la dirección IP propia en su red de área local (10.1.1.1) y se lo mandará a CLIENTE por el puerto por el que este se quedó esperando, en nuestro ejemplo, el 1345. De este modo, CLIENTE ha recibido sus datos transparentemente.
+
+## Preguntas
+
+- ¿Qué es un NAT?
+- ¿Es lo mismo NAT que enmascaramiento IP?
+- ¿Qué diferencias hay entre las funciones de un NAT y un router?
