--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -29,6 +29,8 @@ Todos los paquetes tienen la misma IP privada y el mismo puerto interno son mape
 
 Se trata del típico caso en el que necesitamos publicar un servicio de la red interna para que sea accesible desde la red externa, está pensado para el tráfico entrante.
 
+La conversión de direcciones de red (NAT) estática, o de correlación, proporciona una correspondencia biunívoca entre direcciones IP privadas y direcciones IP públicas. Permite correlacionar una dirección IP de la red interna con una dirección IP que se desea hacer pública.
+
 ### Dinámico
 
 La NAT se establece dinámicamente cuando se inicia una conexión desde el equipo de la red interna. Cada nueva conexión implica la reserva temporal de un puerto, asociado la IP pública del equipo que hace NAT.
@@ -55,3 +57,13 @@ Si el navegador en CLIENTE solicita una página al servidor 225.10.2.150 por el 
 - ¿Qué es un NAT?
 - ¿Es lo mismo NAT que enmascaramiento IP?
 - ¿Qué diferencias hay entre las funciones de un NAT y un router?
+
+## Bibliografía
+
+- [Conversión de direcciones de red (NAT)](https://www.ibm.com/docs/es/i/7.2?topic=concepts-network-address-translation)
+- [NAT Dinámica](https://ccnadesdecero.es/nat-dinamica/)
+- [Configuración de NAT Dinámica](https://ccnadesdecero.es/configuracion-nat-dinamica/)
+- [NAT Estática](https://ccnadesdecero.es/nat-estatica/)
+- [Configuración de la NAT](https://ccnadesdecero.es/configuracion-nat-estatica-dinamica-pat)
+- [Configuración de NAT Estática](https://ccnadesdecero.es/configuracion-nat-estatica/)
+- [Configuración de PAT (NAT con sobrecarga)](https://ccnadesdecero.es/configuracion-pat-nat-sobrecarga/)
