trabajando en el tutorial de OMV

--- a/_posts/2022-01-27-vpn.md
+++ b/_posts/2022-01-27-vpn.md
@@ -19,13 +19,13 @@ La conexión VPN a través de Internet es técnicamente una unión wide area net
 
 Para hacerlo posible de manera segura es necesario proporcionar los medios para garantizar la autentificación.
 
-- Autentificación y autorización: ¿quién está del otro lado? Usuario/equipo y qué nivel de acceso debe tener.
-- Integridad: de que los datos enviados no han sido alterados. Para ello se utilizan funciones de Hash. Los algoritmos de hash más comunes son los Message Digest (MD2 y MD5) y el Secure Hash Algorithm (SHA).
-- Confidencialidad/Privacidad: dado que solamente puede ser interpretada por los destinatarios de la misma. Se hace uso de algoritmos de cifrado como Data Encryption Standard (DES), Triple DES (3DES) y Advanced Encryption Standard (AES).
-- No repudio: es decir, un mensaje tiene que ir firmado, y quien lo firma no puede negar que envió el mensaje.
-- Control de acceso: se trata de asegurar que los participantes autentificados tienen acceso únicamente a los datos a los que están autorizados.
-- Auditoría y registro de actividades: se trata de asegurar el correcto funcionamiento y la capacidad de recuperación.
-- Calidad del servicio: se trata de asegurar un buen rendimiento, que no haya una degradación poco aceptable en la velocidad de transmisión.
+- **Autentificación y autorización**: ¿quién está del otro lado? Usuario/equipo y qué nivel de acceso debe tener.
+- **Integridad**: de que los datos enviados no han sido alterados. Para ello se utilizan funciones de Hash. Los algoritmos de hash más comunes son los Message Digest (MD2 y MD5) y el Secure Hash Algorithm (SHA).
+- **Confidencialidad/Privacidad**: dado que solamente puede ser interpretada por los destinatarios de la misma. Se hace uso de algoritmos de cifrado como Data Encryption Standard (DES), Triple DES (3DES) y Advanced Encryption Standard (AES).
+- **No repudio**: es decir, un mensaje tiene que ir firmado, y quien lo firma no puede negar que envió el mensaje.
+- **Control de acceso**: se trata de asegurar que los participantes autentificados tienen acceso únicamente a los datos a los que están autorizados.
+- **Auditoría y registro de actividades**: se trata de asegurar el correcto funcionamiento y la capacidad de recuperación.
+- **Calidad del servicio**: se trata de asegurar un buen rendimiento, que no haya una degradación poco aceptable en la velocidad de transmisión.
 
 {:.section}
 ## Tipos de VPN
@@ -42,14 +42,15 @@ Es quizás el modelo más usado actualmente, y consiste en usuarios que se conec
 
 Este esquema se utiliza para conectar oficinas remotas con la sede central de la organización. El servidor VPN, que posee un vínculo permanente a Internet, acepta las conexiones vía Internet provenientes de los sitios y establece el túnel VPN. Los servidores de las sucursales se conectan a Internet utilizando los servicios de su proveedor local de Internet, típicamente mediante conexiones de banda ancha. Esto permite eliminar los costosos vínculos punto a punto tradicionales (realizados comúnmente mediante conexiones de cable físicas entre los nodos), sobre todo en las comunicaciones internacionales. Es más común el siguiente punto, también llamado tecnología de túnel o tunneling.
 
+{:.question}
+¿Qué diferencia hay entre VPN de acceso remoto y VPN punto a punto?
+
 {:.subsection}
 ### Tunneling
 
 La técnica de tunneling consiste en encapsular un protocolo de red sobre otro (protocolo de red encapsulador) creando un túnel dentro de una red de computadoras. El establecimiento de dicho túnel se implementa incluyendo una PDU (unidades de datos de protocolo) determinada dentro de otra PDU con el objetivo de transmitirla desde un extremo al otro del túnel sin que sea necesaria una interpretación intermedia de la PDU encapsulada. De esta manera se encaminan los paquetes de datos sobre nodos intermedios que son incapaces de ver en claro el contenido de dichos paquetes. El túnel queda definido por los puntos extremos y el protocolo de comunicación empleado, que entre otros, podría ser SSH.
 
 El uso de esta técnica persigue diferentes objetivos, dependiendo del problema que se esté tratando, como por ejemplo la comunicación de islas en escenarios multicast, la redirección de tráfico, etc.
-
-Uno de los ejemplos más claros de utilización de esta técnica consiste en la redirección de tráfico en escenarios IP Móvil. En escenarios de IP móvil, cuando un nodo-móvil no se encuentra en su red base, necesita que su home-agent realice ciertas funciones en su puesto, entre las que se encuentra la de capturar el tráfico dirigido al nodo-móvil y redirigirlo hacia él. Esa redirección del tráfico se realiza usando un mecanismo de tunneling, ya que es necesario que los paquetes conserven su estructura y contenido originales (dirección IP de origen y destino, puertos, etc.) cuando sean recibidos por el nodo-móvil. Se maneja de manera remota.
 
 {:.subsection}
 ### VPN over LAN
