--- a/_posts/2022-02-08-vlan.md
+++ b/_posts/2022-02-08-vlan.md
@@ -41,9 +41,9 @@ Otras características son:
 {:.subsection}
 ### Switches y VLAN.
 
-La infraestructura de VLAN está distribuida entre varios conmutadores (switches), que se dictan conectan entre sí mediante puertos de mayor capacidad. Este interconexión es considerada parte del cableado backbone o troncal de la red.
+La infraestructura de VLAN está distribuida entre varios conmutadores (switches), que se conectan entre sí mediante puertos de mayor capacidad. Esta interconexión es considerada parte del cableado backbone o troncal de la red.
 
-La información sobre las VLAN definidas y sobre la pertenencia de cada uno de los usuarios a las distintas VLAN Se distribuye a través del backbone entre los distintos conmutadores usan el protocolo IEE 802.1Q, que funciona de esta manera:
+La información sobre las VLAN definidas y sobre la pertenencia de cada uno de los usuarios a las distintas VLAN se distribuye a través del backbone entre los distintos conmutadores usan el protocolo IEE 802.1, que funciona de esta manera:
 
 - cada VLAN tiene un identificador 
 - Las tramas procedentes de los usuarios se etiquetan con el identificador  correspondiente a la VLAN a la que pertenecen. 
