--- a/_posts/2022-02-08-vlan.md
+++ b/_posts/2022-02-08-vlan.md
@@ -7,7 +7,7 @@ tags: [redes locales, smr, teoría]
 
 ## Aviso
 
-En la Sección 6.8 del libro está **mejor** explicado.
+En la Sección 6.8 del libro también está explicado. Se recuerda que los **conmutadores son switches**, los enrutadores o encaminadores son los routers y los concentradores son los hubs.
 
 {:.section}
 ## Introducción
@@ -16,24 +16,27 @@ En ocasiones es necesario que una red pueda filtrar los paquetes para que la inf
 
 Una VLAN es un método que crea una red lógica dentro de una red física. De este modo se consigue que la información que se genera dentro de cada una de las redes virtuales solo sea recibida por hosts de la propia red lógica y no por toda la red física.
 
+![Segmentación LAN tradicional vs segmentación VLAN](/assets/img/vlan/segmentacionLanVsSegmentacionVlan.png)
+_Segmentación LAN tradicional vs segmentación VLAN_
+
 {:.section}
 ## Características de las VLAN
 
 Las principales características de la VLAN son:
 
-- Crear una topología virtual independiente de la topología física.
-- Permiten agrupar a los usuarios en grupos de trabajo flexibles, que se pueden modificar simplemente gestionándolos a través de la interfaz de configuración del conmutador. 
-- Funcionan los niveles 2 y 3 de OSI. 
-- La comunicación entre VLAN requiere enrutamiento de capa 3, que es realizado por un router.
-- Permite controlar el tamaño de los dominios la difusión. Cada VLAN define un dominio de difusión diferente. 
-- Necesita administración, que suele llevarse a cabo mediante el administrador de la red. 
-- Pueden aumentar la seguridad de la red. El hecho de separar la red en grupos que no puedan compartir información entre sí supone una mejora en la seguridad.
+- Crear una **topología virtual independiente** de la topología física.
+- Permiten **agrupar a los usuarios** en grupos de trabajo flexibles, que se pueden modificar simplemente gestionándolos a través de la interfaz de configuración del conmutador. 
+- Funcionan los **niveles 2 y 3 de OSI**. 
+- La **comunicación entre VLAN requiere** enrutamiento de capa 3, que es realizado por **un router**.
+- Permite **controlar el tamaño de los dominios la difusión**. Cada VLAN define un dominio de difusión diferente. 
+- **Necesita administración**, que suele llevarse a cabo mediante el administrador de la red. 
+- **Pueden aumentar la seguridad** de la red. El hecho de separar la red en grupos que no puedan compartir información entre sí supone una mejora en la seguridad.
 
 Otras características son:
 
-- Aumento de la eficiencia del ancho de banda: La cantidad paquetes que circula por la red es menor, así que el uso del ancho de banda es más eficiente. 
-- Aumento de la flexibilidad de la red: Varios hosts conectados al mismo conmutador puedan pertenecer a distintas VLAN, y también hosts de distintos conmutadores pueden pertenecer a la misma VLAN. 
-- Aumento de la escalabilidad de la red: Es más fácil aumentar una red previamente segmentada da sus ventajas en ancho de banda seguridad y flexibilidad. 
+- **Aumento de la eficiencia del ancho de banda**: La cantidad paquetes que circula por la red es menor, así que el uso del ancho de banda es más eficiente. 
+- **Aumento de la flexibilidad de la red**: Varios hosts conectados al mismo conmutador puedan pertenecer a distintas VLAN, y también hosts de distintos conmutadores pueden pertenecer a la misma VLAN. 
+- **Aumento de la escalabilidad de la red**: Es más fácil aumentar una red previamente segmentada da sus ventajas en ancho de banda seguridad y flexibilidad. 
 
 {:.section}
 ## Formas de VLAN
@@ -45,11 +48,14 @@ La infraestructura de VLAN está distribuida entre varios conmutadores (switches
 
 La información sobre las VLAN definidas y sobre la pertenencia de cada uno de los usuarios a las distintas VLAN se distribuye a través del backbone entre los distintos conmutadores usan el protocolo IEE 802.1, que funciona de esta manera:
 
-- cada VLAN tiene un identificador 
+- Cada VLAN tiene un identificador.
 - Las tramas procedentes de los usuarios se etiquetan con el identificador  correspondiente a la VLAN a la que pertenecen. 
-- El etiquetado se lleva a cabo en el switch (capa 2 del modelo OSI)
+- El etiquetado se lleva a cabo en el switch (capa 2 del modelo OSI).
 - Las tramas etiquetadas atraviesan el backbone. 
 - Cuando una trama etiquetado abandona el backbone, el conmutador elimina el identificador. 
+
+![Switches y VLAN](/assets/img/vlan/switchesYVlan.png)
+_Switches y VLAN_
 
 {:.subsection}
 ### Routers y VLAN
@@ -65,10 +71,13 @@ Para reducir costes, es posible utilizar Hubs pero teniendo en cuenta algunas cu
 - El Hub se conecta por un lado a un puerto de un switch VLAN, y por otro lado a cierto número de equipos de usuarios.
 - Todos los usuarios conectados al mismo Hub pertenecen A la misma VLAN, y al mismo dominio de colisión, es decir comparten el ancho de banda correspondiente al puerto de switch. 
 
+![Hubs y VLAN](/assets/img/vlan/hubsYVlan.png)
+_Hubs y VLAN_
+
 {:.section}
 ## Asignación de usuarios en VLAN
 
-La asignación de los usuarios puede ser de dos maneras: 
+En principio, la configuración VLAN cambia dependiendo del fabricante. La asignación de los usuarios puede ser de dos maneras: 
 
 - Estática 
 - Dinámica
@@ -85,14 +94,17 @@ Por defecto la VLAN 1 es con la que se suele trabajar.
 
 La pertenencia a una VLAN puede depender de tres factores:
 
-- La dirección física del nodo,
-- La dirección lógica del nodo,  
-- El tipo de protocolo del uso,
+- La dirección física del nodo.
+- La dirección lógica del nodo.
+- El tipo de protocolo del uso.
 - Otros parámetros de control que la persona que administre la red determina.
 
 El procedimiento es el siguiente:
 
-- Se necesita un servidor de configuración VLAN – que se debe mantener, pues supone un punto más de fallo -, 
+- Se necesita un servidor de configuración VLAN – que se debe mantener, pues supone un punto más de fallo.
 - Al conectar un usuario a un puerto el switch consulta al servidor de configuración a qué VLAN pertenece. 
 - Cuando se realizan cambios en la ubicación física del puesto de trabajo de los usuarios no es necesario la intervención del administrador de la red, ya que los desplazamientos físicos entre los puertos de los switches se detectan automáticamente. 
 Ofrece mayor seguridad ya que se notifica si usuarios no autorizados acceden a la red.
+
+## Bibliografía
+
