--- a/_posts/2022-03-30-raid.md
+++ b/_posts/2022-03-30-raid.md
@@ -82,6 +82,12 @@ _RAID 5_
 {:.question}
 ¿Cuántos discos necesita un RAID 5 como mínimo? ¿Cuántos puede tener como máximo? ¿A mayor número de discos mayor es la tolerancia a fallos?
 
+{:.question}
+¿Es más rápido leer en un RAID 5?
+
+{:.question}
+¿Es más rápido escribir en un RAID 5?
+
 ## Tipos de RAID
 
 - **Basado en software**: Aplicación sin hardware adicional Coste reducido. Desprotección al arrancar y peor rendimiento. La velocidad dependerá de la CPU del ordenador.
