modificando la teoria del nat

--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -11,19 +11,50 @@ En la Sección 6.9 del libro está muy bien explicado.
 
 ## Introducción
 
-<iframe width="100%" height="315" src="https://www.youtube.com/embed/HeZWcZmrQUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+Como sabes, no hay suficientes direcciones IPv4 públicas para asignar una dirección única a cada dispositivo conectado a Internet. Las redes suelen implementarse mediante el uso de direcciones IPv4 privadas, según se definen en RFC 1918. El rango de direcciones incluido en RFC 1918 se incluye en la siguiente tabla. Es muy probable que la computadora que utilizas para ver este curso tenga asignada una dirección privada.
 
-Lo habitual es que las LAN que tienen acceso a Internet utilicen un esquema de direcciones IP privadas para tráfico local de la red y que en Internet usen unas direcciones IP públicas.
+| Clase | Rango de @ privadas | Prefijo | Nº de redes |
+|---|---|---|---|
+| Clase A | 10.0.0.0 a 10.255.255.255 | 10.0.0.0/8 | 1 red |
+| Clase B | 172.16.0.0 a 172.31.255.255 | 172.16.0.0/12 | 16 redes |
+| Clase C | 192.168.0.0 a 192.168.255.255 | 192.168.0.0/16| 255 redes |
+
+Estas direcciones privadas se utilizan dentro de una organización o un sitio para permitir que los dispositivos se comuniquen localmente. Sin embargo, debido a que estas direcciones no identifican a una sola empresa u organización, las direcciones IPv4 privadas no se pueden enrutar a través de Internet. Para permitir que un dispositivo con una dirección IPv4 privada acceda a recursos y dispositivos fuera de la red local, primero se debe traducir la dirección privada a una dirección pública.
+
+NAT proporciona la traducción de direcciones privadas a direcciones públicas, como se muestra en la figura. Esto permite que un dispositivo con una dirección IPv4 privada acceda a recursos fuera de su red privada, como los que se encuentran en Internet. NAT, combinado con direcciones IPv4 privadas, ha sido el método principal para preservar las direcciones IPv4 públicas. Se puede compartir una única dirección IPv4 pública entre cientos o incluso miles de dispositivos, cada uno configurado con una dirección IPv4 privada exclusiva.
+
+![Traducción de direcciones privadas a públicas](/assets/img/nat/Traduccion-de-direcciones-privadas-a-publicas.png)
+_Traducción de direcciones privadas a públicas_
+
+
+Sin NAT, el agotamiento del espacio de direcciones IPv4 habría ocurrido mucho antes del año 2000. Sin embargo, NAT tiene limitaciones y desventajas, que se explorarán más adelante en este módulo. La solución al agotamiento del espacio de direcciones IPv4 y a las limitaciones de NAT es la transición final a IPv6.
+
+
+## ¿Cómo funciona un NAT?
 
 La traducción de estas direcciones de red (NAT) es un mecanismo que permite a varias máquinas de una LAN con direcciones privadas para que puedan acceder a una red externa, por ejemplo Internet, con una IP pública. Esta traducción de direcciones también es llamada **enmascaramiento IP**.
 
-Para que sea posible hacer esa traducción de direcciones ha de haber un dispositivo que se encargue de hacer esa traducción en ambos sentidos que generalmente es un router, un cortafuegos o un equipo dedicado (proxy NAT). 
+Para que sea posible hacer esa traducción de direcciones ha de haber un dispositivo que se encargue de hacer esa traducción en ambos sentidos que generalmente es un router, un cortafuegos o un equipo dedicado (proxy NAT).
 
-Ejemplo: Una cosa son las direcciones que tenemos en la red en nuestra casa y otra es cómo nos ven desde fuera de nuestra red.
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/HeZWcZmrQUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+![Funcionamiento de un NAT](/assets/img/nat/Como-Funciona-NAT.gif)
+_Funcionamiento de un NAT_
+
+## Terminología NAT
+
+
+
 
 ## Tipos de NAT
 
-### Estático
+Existen 3 tipos de NAT:
+
+- NAT estático
+- NAT dinámico
+- PAT
+
+### NAT estático
 
 Todos los paquetes tienen la misma IP privada y el mismo puerto interno son mapeados siempre a la misma dirección IP pública y al mismo puerto externo. Cualquier máquina externa puede enviar un paquete a la máquina interna indicando la dirección y el puerto externo que ha sido mapeado.
 
@@ -31,11 +62,13 @@ Se trata del típico caso en el que necesitamos publicar un servicio de la red i
 
 La conversión de direcciones de red (NAT) estática, o de correlación, proporciona una correspondencia biunívoca entre direcciones IP privadas y direcciones IP públicas. Permite correlacionar una dirección IP de la red interna con una dirección IP que se desea hacer pública.
 
-### Dinámico
+### NAT dinámico
 
-La NAT se establece dinámicamente cuando se inicia una conexión desde el equipo de la red interna. Cada nueva conexión implica la reserva temporal de un puerto, asociado la IP pública del equipo que hace NAT.
 
-Cuando la conexión termina el correspondiente NAT se elimina liberando del puerto que tenía asociado. Es un NAT que se establece dinámicamente ya que lo gestiona el propio dispositivo y está pensado para tráfico saliente.
+
+### PAT
+
+
 
 ## Ejemplo de funcionamiento NAT
 
@@ -51,6 +84,8 @@ _Esquema de un ejemplo de utilización de enmascaramiento IP_
 En CLIENTE, configuramos TCP/P para que la ruta por defecto apunte a SERVIDOR. Por otra parte, por ejemplo, el navegador pediría datos utilizando un puerto que el servidor que le brinde las páginas aprovechará para enviárselas con la seguridad de que el navegador se quedó escuchando por ese puerto. 
 
 Si el navegador en CLIENTE solicita una página al servidor 225.10.2.150 por el puerto 1345, como CLIENTE no tiene acceso por red al host 225.10.2.150, mandará el men saje por la ruta de defecto a SERVIDOR. Si SERVIDOR tiene habilitado el servicio de enmascaramiento, sustituirá la dirección IP de CLIENTE por la suya propia en la interfaz WAN (213.97.2.12) y el número de puerto por otro que tenga libre, haciéndole la petición al servidor web de dirección 225.10.2.150. Cuando el servidor web le conteste, SERVIDOR sustituirá la dirección IP WAN suya (213.97.2.12) por la dirección IP propia en su red de área local (10.1.1.1) y se lo mandará a CLIENTE por el puerto por el que este se quedó esperando, en nuestro ejemplo, el 1345. De este modo, CLIENTE ha recibido sus datos transparentemente.
+
+
 
 ## Preguntas
 
